[package]
name = "rusty"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.11", features = ["client", "gateway", "rustls_backend", "model", "standard_framework", "voice"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal" ] }
dotenv = "0.15.0"
songbird = "0.3.0"
